Fixed bug #41567 (json_encode() double conversion is inconsistent with PHP).