ext/json/tests/bug41567.phpt
@@ -1,0 +1,13 @@
+--TEST--
+Bug #41567 (json_encode() double conversion is inconsistent with PHP)
+--FILE--
+<?php
+
+$a = json_encode(123456789.12345);
+var_dump(json_decode($a));
+
+echo "Done\n";
+?>
+--EXPECT--	
+float(123456789.12345)
+Done
